fix: spacing between vertical line and footer

--- a/style.css
+++ b/style.css
@@ -46,14 +46,18 @@ header {
 .line-1 .circle-line,
 .line-2 .circle-line {
   border-radius: 50%;
-  border: 1px solid #87879d;
+  border: 1px solid #bebecf;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: -1px;
   width: 40px;
   height: 40px;
-  opacity: 40%;
+}
+
+.line-2 .circle-line{
+  background-color: white;
+  z-index: 10;
 }
 
 .banner-left {
@@ -168,7 +172,7 @@ footer {
   justify-content: space-evenly;
   align-items: center;
   height: 10rem;
-  margin-top: 6em;
+  margin-top: 4em;
 }
 
 footer .footer-feature-1 {
@@ -214,35 +218,45 @@ footer .download .download-btn {
     width: 100%;
   }
 
-  .gallery{
+  .banner-center h1 {
+    font-size: 48px;
+  }
+
+  
+
+  .gallery {
     margin-top: 8em;
   }
 
-  .gallery-grid {
+  /* .gallery-grid {
     grid-template-columns: repeat(2, auto) !important;
-  }
+  } */
 
-  footer{
+  .gallery {
+    margin: 15% 5%;
+  }
+  footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     padding: 1em 4em;
-    background-image: url('assets/tablet/image-footer.jpg'), linear-gradient(#4d96a9, #4d96a9);
+    background-image: url("assets/tablet/image-footer.jpg"),
+      linear-gradient(#4d96a9, #4d96a9);
   }
 
-  footer .footer-feature-1{
+  footer .footer-feature-1 {
     flex-basis: 33.33%;
     font-size: 1.5rem;
     padding-top: 1em;
   }
 
-  footer .footer-feature-2{
+  footer .footer-feature-2 {
     flex-basis: 33.33%;
     font-size: 1rem;
   }
 
-  footer .download{
+  footer .download {
     flex-basis: 33.33%;
   }
 }
